# apache-airflow-providers-nz

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
airflownz/: provider_info.py
airflownz/hooks/: netezza.py
airflownz/operators/: netezza.py
apache-airflow-providers-nz/: provider_info.py  setup.cfg
