[tool.poetry]
name = "apache-airflow-providers-nz"
version = "1.0.0"
description = "Airflow Hook for Netezza"
authors = ["Sanjay Renduchintala <san8055@gmail.com>"]
license = "Apache License Version 2.0"
packages = [
    { include = "apache-airflow-providers-nz" },
]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.2.0"
apache-airflow-providers-common-sql = "^1.1.0"
nzpy = "^1.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

